--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
 	<meta charset=utf-8>
 	<title>Car Simulator</title>
-	<link rel="stylesheet" type="text/css" href="Car-Module/css/index.css">
+	<link rel="stylesheet" type="text/css" href="./Car-Module/css/index.css">
 </head>
 
 <body>
 	<div id="info">Description</div>
-	<script src="Car-Module/js/lib/three.min.js"></script>
-	<script src="Car-Module/js/lib/Detector.js"></script>
-	<script src="Car-Module/js/lib/OrbitControls.js"></script>
-	<script src="Car-Module/js/scene.js"></script>
+	<script src="./Car-Module/js/lib/three.min.js"></script>
+	<script src="./Car-Module/js/lib/Detector.js"></script>
+	<script src="./Car-Module/js/lib/OrbitControls.js"></script>
+	<script src="./Car-Module/js/scene.js"></script>
 </body>
 
 </html>
