--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-	<div id="info">Description</div>
+	<div class="status">
+		<p>Position: (<span id="x">0.0</span>, <span id="y">0.0</span>)</p>
+		<p>Steering Wheel Angle: <span id="angleWheel">0.0</span></p>
+		<p>Car Horizontal Axis Angle: <span id="angleCar">90.0</span></p>
+	</div>
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
 	<script src="./Car-Module/js/lib/OrbitControls.js"></script>
