--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
 	<div class="status">
 		<p>Position: (<span id="x">0.0</span>, <span id="y">0.0</span>)</p>
-		<p>Steering Wheel Angle: <span id="angleWheel">0.0</span></p>
 		<p>Car Horizontal Axis Angle: <span id="angleCar">90.0</span></p>
+		<p>Steering Wheel Angle:
+			<span id="angleWheel">0.0</span>
+			<input id="angleWheelRange" type="range" min="-40.0" max="40.0" value="0.0" step="0.1" oninput="updateAngleWheel()" onchange="updateAngleWheel()">
+		</p>
+		<p>Speed:
+			<span id="speed">10</span>
+			<input id="speedRange" type="range" min="1" max="30" value="10" oninput="updateSpeed()" onchange="updateSpeed()">
+		</p>
 	</div>
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
