--- a/index.html
+++ b/index.html
@@ -16,14 +16,23 @@
 			<input id="angleWheelRange" type="range" min="-40.0" max="40.0" value="0.0" step="0.1" oninput="updateAngleWheel()" onchange="updateAngleWheel()">
 		</p>
 		<p>Speed:
-			<span id="speed">10</span>
-			<input id="speedRange" type="range" min="1" max="30" value="10" oninput="updateSpeed()" onchange="updateSpeed()">
+			<span id="speed">100</span>
+			<input id="speedRange" type="range" min="1" max="300" value="100" oninput="updateSpeed()" onchange="updateSpeed()">
 		</p>
 		<p>Camera:
-			<input id="firstPerson" type="radio" name="camera" oninput="updateCamera()" onchange="updateCamera()">First Person
-			<input id="thirdPerson" type="radio" name="camera" checked="checked" oninput="updateCamera()" onchange="updateCamera()">Third
-			Person
+			<input id="firstPerson" type="radio" name="camera" oninput="updateCamera()" onchange="updateCamera()">
+			<label for="firstPerson">First Person</label>
+			<input id="thirdPerson" type="radio" name="camera" checked="checked" oninput="updateCamera()" onchange="updateCamera()">
+			<label for="thirdPerson">Third Person</label>
+
 		</p>
+	</div>
+	<div class="instructions">
+		<p>Use the mouse to control the camera</p>
+		<p>Press Space to move</p>
+		<p>Press A/D to control the steering wheel</p>
+		<p>Press ↑/↓/←/→ to adjust the position</p>
+		<p>Press R to reset</p>
 	</div>
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
