--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
 	<script src="./Car-Module/js/lib/OrbitControls.js"></script>
+	<script src="./Car-Module/js/sensor.js"></script>
 	<script src="./Car-Module/js/scene.js"></script>
 </body>
 
