--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
 	<script src="./Car-Module/js/lib/OrbitControls.js"></script>
-	<script src="./Car-Module/js/sensor.js"></script>
 	<script src="./Car-Module/js/scene.js"></script>
+	<script src="./Car-Module/js/sensor.js"></script>
+	<script src="./Car-Module/js/car.js"></script>
 </body>
 
 </html>
