Draw Move Trajectory

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="control">
 		<p>
-			<button id="startMotion" onclick="startMotion()">Start Motion (G)</button>
+			<button id="startMotion" onclick="startMotion()">Start Motion (Space / G)</button>
 			<button id="reset" onclick="reset()">Reset (R)</button>
 		</p>
 		<p>Steering Wheel Angle (A/D):
@@ -44,10 +44,12 @@
 	</div>
 	<div class="instructions">
 		<p>Use the mouse to control the camera</p>
-		<p>Press G to start motion</p>
+		<p>Press Space/G to start motion</p>
 		<p>Press A/D to control the steering wheel</p>
 		<p>Press ↑/↓/←/→ to adjust the position</p>
 		<p>Press R to reset</p>
+		<p>Press 1/3 to switch camera</p>
+		<p>Press F to start fuzzy control system</p>
 	</div>
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
