--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<div class="status">
 		<p>Position: (<span id="x">0.0000</span>, <span id="y">0.0000</span>)</p>
 		<p>Car Horizontal Axis Angle: <span id="angleCar">90.0</span></p>
-		<p>Sensor Center: <span id="distanceCenter">22.0000</span></p>
-		<p>Sensor Right: <span id="distanceRight">8.4853</span></p>
-		<p>Sensor Left: <span id="distanceLeft">8.4853</span></p>
+		<p>Sensor Center Distance: <span id="distanceCenter">22.0000</span></p>
+		<p>Sensor Right Distance: <span id="distanceRight">8.4853</span></p>
+		<p>Sensor Left Distance: <span id="distanceLeft">8.4853</span></p>
 	</div>
 	<div class="control">
 		<p>
