Update genetic algorithm

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			<button id="fuzzyStart" onclick="fuzzyStart()">Start (F)</button>
 		</p>
 		<p>Genetic Algorithm:
+			<button id="geneticTrain" onclick="geneticTrain()">Train Network</button>
 			<button id="geneticStart" onclick="geneticStart()">Start (G)</button>
 		</p>
 		<p>
