Disable start button before train

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</p>
 		<p>Genetic Algorithm:
 			<button id="geneticTrain" onclick="geneticTrain()">Train Network</button>
-			<button id="geneticStart" onclick="geneticStart()">Start (G)</button>
+			<button id="geneticStart" onclick="geneticStart()" disabled="disabled">Start (G)</button>
 		</p>
 		<p>
 			<textarea id="data4D" style="display:none"></textarea>
