--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<p>Sensor Center Distance: <span id="distanceCenter">22.0000</span></p>
 		<p>Sensor Right Distance: <span id="distanceRight">8.4853</span></p>
 		<p>Sensor Left Distance: <span id="distanceLeft">8.4853</span></p>
+		<p>GA Loss Rate: <span id="lossRate">Null</span></p>
 	</div>
 	<div class="control">
 		<p>
