--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
 			<button id="fuzzyStart" onclick="fuzzyStart()">Start (F)</button>
 		</p>
 		<p>Genetic Algorithm:
-			<button id="geneticTrain" onclick="geneticTrain()">Train Network</button>
+			<select id="geneticDataset" onchange="updateDataset(this.value)">
+				<option value="dataset-4D/train_1.txt">4D-data-1</option>
+				<option value="dataset-4D/train_3.txt">4D-data-2</option>
+				<option value="dataset-4D/train_5.txt">4D-data-3</option>
+				<option value="dataset-6D/train_5.txt" selected>6D-data-1</option>
+				<option value="dataset-6D/train_3.txt">6D-data-2</option>
+				<option value="dataset-6D/train_1.txt">6D-data-3</option>
+			</select>
+			<input id="numberOfNeurons" type="text" value="3" style="width:20px" oninput="updateNumberOfNeurons(this.value)" />
+			<button id="geneticTrain" onclick="geneticTrain()">Train</button>
 			<button id="geneticStart" onclick="geneticStart()" disabled="disabled">Start (G)</button>
 		</p>
 		<p>
