--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 			<button id="fuzzyStart" onclick="fuzzyStart()">Start (F)</button>
 		</p>
 		<p>Genetic Algorithm:
+			<button id="geneticTrain" onclick="geneticTrain()">Train</button>
+			<button id="geneticStart" onclick="geneticStart()" disabled="disabled">Start (G)</button>
+		</p>
+		<p>GA
+			<label for="geneticDataset">Dataset:</label>
 			<select id="geneticDataset" onchange="updateDataset(this.value)">
 				<option value="dataset-4D/train_1.txt">4D-data-1</option>
 				<option value="dataset-4D/train_3.txt">4D-data-2</option>
@@ -47,15 +52,24 @@
 				<option value="dataset-6D/train_3.txt">6D-data-2</option>
 				<option value="dataset-6D/train_1.txt">6D-data-3</option>
 			</select>
+			<label for="maxIterations">Max Iterations:</label>
+			<input id="maxIterations" type="text" value="500" style="width:25px" oninput="updateMaxIterations(this.value)" />
+			<label for="numberOfNeurons">Neurons:</label>
 			<input id="numberOfNeurons" type="text" value="3" style="width:20px" oninput="updateNumberOfNeurons(this.value)" />
-			<button id="geneticTrain" onclick="geneticTrain()">Train</button>
-			<button id="geneticStart" onclick="geneticStart()" disabled="disabled">Start (G)</button>
+		</p>
+		<p>GA
+			<label for="populationSize">Population:</label>
+			<input id="populationSize" type="text" value="512" style="width:25px" oninput="updatePopulationSize(this.value)" />
+			<label for="matingRate">Mating Rate:</label>
+			<input id="matingRate" type="text" value="0.5" style="width:20px" oninput="updateMatingRate(this.value)" />
+			<label for="mutationRate">Mutation Rate:</label>
+			<input id="mutationRate" type="text" value="0.5" style="width:20px" oninput="updateMutationRate(this.value)" />
 		</p>
 		<p>
 			<textarea id="data4D" style="display:none"></textarea>
 			<textarea id="data6D" style="display:none"></textarea>
-			<button id="saveFile4D" onclick="saveFile4D()">Save the file (4D)</button>
-			<button id="saveFile6D" onclick="saveFile6D()">Save the file (6D)</button>
+			<button id="saveFile4D" onclick="saveFile4D()">Save the track (4D)</button>
+			<button id="saveFile6D" onclick="saveFile6D()">Save the track (6D)</button>
 		</p>
 	</div>
 	<div class="result">
