--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<input id="maxVelocity" type="text" value="40" style="width:20px" oninput="updateMaxVelocity(this.value)" />
 			<label for="cognition">PSO Cognition:</label>
 			<input id="cognition" type="text" value="0.3" style="width:20px" oninput="updateCognition(this.value)" />
-			<label for="social">PSO Cognition:</label>
+			<label for="social">PSO Social:</label>
 			<input id="social" type="text" value="0.3" style="width:20px" oninput="updateSocial(this.value)" />
 		</p>
 		<p>
