--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
 <head>
 	<meta charset=utf-8>
 	<title>Car Simulator</title>
+	<link rel="stylesheet" type="text/css" href="./Car-Module/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="./Car-Module/css/index.css">
 </head>
 
 <body>
+	<div id="preloader" class="preloader-wrapper big active">
+		<div class="spinner-layer spinner-blue-only">
+			<div class="circle-clipper left">
+				<div class="circle"></div>
+			</div>
+			<div class="gap-patch">
+				<div class="circle"></div>
+			</div>
+			<div class="circle-clipper right">
+				<div class="circle"></div>
+			</div>
+		</div>
+	</div>
 	<div class="status">
 		<p>Position: (<span id="x">0.0000</span>, <span id="y">0.0000</span>)</p>
 		<p>Car Horizontal Axis Angle: <span id="angleCar">90.0</span></p>
@@ -17,72 +31,104 @@
 		<p>Loss Rate: <span id="lossRate">Null</span></p>
 	</div>
 	<div class="control">
-		<p>
-			<button id="startMotion" onclick="startMotion()">Start Motion (Space / M)</button>
-			<button id="reset" onclick="reset()">Reset (R)</button>
-		</p>
-		<p>Steering Wheel Angle (A/D):
-			<span id="angleWheel">0.0</span>
-			<input id="angleWheelRange" type="range" min="-40.0" max="40.0" value="0.0" step="0.1" oninput="updateAngleWheel()" onchange="updateAngleWheel()">
-		</p>
-		<p>Speed:
-			<span id="speed">100</span>
-			<input id="speedRange" type="range" min="1" max="300" value="100" oninput="updateSpeed()" onchange="updateSpeed()">
-		</p>
-		<p>Camera:
-			<input id="firstPerson" type="radio" name="camera" oninput="updateCamera()" onchange="updateCamera()">
-			<label for="firstPerson">First Person (1)</label>
-			<input id="thirdPerson" type="radio" name="camera" checked="checked" oninput="updateCamera()" onchange="updateCamera()">
-			<label for="thirdPerson">Third Person (3)</label>
-		</p>
-		<p>Fuzzy Control System:
-			<button id="fuzzyStart" onclick="fuzzyStart()">Start (F)</button>
-		</p>
-		<p>Genetic Algorithm:
-			<button id="geneticTrain" onclick="geneticTrain()">Train</button>
-			<button id="geneticStart" onclick="geneticStart()" disabled="disabled">Start (G)</button>
-		</p>
-		<p>Particle Swarm Optimization:
-			<button id="psoTrain" onclick="psoTrain()">Train</button>
-			<button id="psoStart" onclick="psoStart()" disabled="disabled">Start (P)</button>
-		</p>
-		<p>
-			<label for="geneticDataset">Dataset:</label>
-			<select id="geneticDataset" onchange="updateDataset(this.value)">
-				<option value="dataset-4D/train_1.txt">4D-data-1</option>
-				<option value="dataset-4D/train_3.txt">4D-data-2</option>
-				<option value="dataset-4D/train_5.txt">4D-data-3</option>
-				<option value="dataset-6D/train_5.txt" selected>6D-data-1</option>
-				<option value="dataset-6D/train_3.txt">6D-data-2</option>
-				<option value="dataset-6D/train_1.txt">6D-data-3</option>
-			</select>
-			<label for="maxIterations">Max Iterations:</label>
-			<input id="maxIterations" type="text" value="500" style="width:25px" oninput="updateMaxIterations(this.value)" />
-			<label for="numberOfNeurons">Neurons:</label>
-			<input id="numberOfNeurons" type="text" value="3" style="width:20px" oninput="updateNumberOfNeurons(this.value)" />
-		</p>
-		<p>
-			<label for="size">Size:</label>
-			<input id="size" type="text" value="512" style="width:25px" oninput="updateSize(this.value)" />
-			<label for="matingRate">GA Mating Rate:</label>
-			<input id="matingRate" type="text" value="0.5" style="width:20px" oninput="updateMatingRate(this.value)" />
-			<label for="mutationRate">GA Mutation Rate:</label>
-			<input id="mutationRate" type="text" value="0.5" style="width:20px" oninput="updateMutationRate(this.value)" />
-		</p>
-		<p>
-			<label for="maxVelocity">PSO Max Velocity:</label>
-			<input id="maxVelocity" type="text" value="40" style="width:20px" oninput="updateMaxVelocity(this.value)" />
-			<label for="cognition">PSO Cognition:</label>
-			<input id="cognition" type="text" value="0.3" style="width:20px" oninput="updateCognition(this.value)" />
-			<label for="social">PSO Social:</label>
-			<input id="social" type="text" value="0.3" style="width:20px" oninput="updateSocial(this.value)" />
-		</p>
-		<p>
+		<div class="row">
+			<button id="startMotion" class="waves-effect waves-light btn" onclick="startMotion()">Start Motion (Space / M)</button>
+			<button id="reset" class="waves-effect waves-light btn" onclick="reset()">Reset (R)</button>
+		</div>
+		<div class="row">
+			<div class="col s2">Camera</div>
+			<div class="col s4">
+				<input id="firstPerson" type="radio" name="camera" oninput="updateCamera()" onchange="updateCamera()">
+				<label for="firstPerson">First Person (1)</label>
+			</div>
+			<div class="col s4">
+				<input id="thirdPerson" type="radio" name="camera" checked="checked" oninput="updateCamera()" onchange="updateCamera()">
+				<label for="thirdPerson">Third Person (3)</label>
+			</div>
+		</div>
+		<div class="row">Steering Wheel Angle (A/D): <span id="angleWheel">0.0</span>
+			<p class="range-field">
+				<input id="angleWheelRange" type="range" min="-40.0" max="40.0" value="0.0" step="0.1" oninput="updateAngleWheel()" onchange="updateAngleWheel()">
+			</p>
+		</div>
+		<div class="row">Speed: <span id="speed">100</span>
+			<p class="range-field">
+				<input id="speedRange" type="range" min="1" max="300" value="100" oninput="updateSpeed()" onchange="updateSpeed()">
+			</p>
+		</div>
+		<div class="row">
+			<div class="col s5">Fuzzy Control System</div>
+			<button id="fuzzyStart" class="waves-effect waves-light btn" onclick="fuzzyStart()">Start (F)</button>
+		</div>
+		<div class="row">
+			<div class="col s5">Genetic Algorithm</div>
+			<button id="geneticTrain" class="waves-effect waves-light btn" onclick="geneticTrain()">Train</button>
+			<button id="geneticStart" class="waves-effect waves-light btn" onclick="geneticStart()" disabled="disabled">Start (G)</button>
+		</div>
+		<div class="row">
+			<div class="col s5">Particle Swarm Optimization</div>
+			<button id="psoTrain" class="waves-effect waves-light btn" onclick="psoTrain()">Train</button>
+			<button id="psoStart" class="waves-effect waves-light btn" onclick="psoStart()" disabled="disabled">Start (P)</button>
+		</div>
+		<div class="row">
+			<div class="input-field col s6">
+				<select id="geneticDataset" onchange="updateDataset(this.value)">
+					<optgroup label="4D Datasets">
+						<option value="dataset-4D/train_1.txt">4D-data-1</option>
+						<option value="dataset-4D/train_3.txt">4D-data-2</option>
+						<option value="dataset-4D/train_5.txt">4D-data-3</option>
+					</optgroup>
+					<optgroup label="6D Datasets">
+						<option value="dataset-6D/train_5.txt" selected>6D-data-1</option>
+						<option value="dataset-6D/train_3.txt">6D-data-2</option>
+						<option value="dataset-6D/train_1.txt">6D-data-3</option>
+					</optgroup>
+				</select>
+				<label>Dataset:</label>
+			</div>
+			<div class="input-field col s3">
+				<input id="maxIterations" type="text" value="500" oninput="updateMaxIterations(this.value)" />
+				<label class="active" for="maxIterations">Max Iterations</label>
+			</div>
+			<div class="input-field col s3">
+				<input id="numberOfNeurons" type="text" value="3" oninput="updateNumberOfNeurons(this.value)" />
+				<label class="active" for="numberOfNeurons">Neurons</label>
+			</div>
+		</div>
+		<div class="row">
+			<div class="input-field col s4">
+				<input id="size" type="text" value="512" oninput="updateSize(this.value)" />
+				<label class="active" for="size">Size</label>
+			</div>
+			<div class="input-field col s4">
+				<input id="matingRate" type="text" value="0.5" oninput="updateMatingRate(this.value)" />
+				<label class="active" for="matingRate">GA Mating Rate</label>
+			</div>
+			<div class="input-field col s4">
+				<input id="mutationRate" type="text" value="0.5" oninput="updateMutationRate(this.value)" />
+				<label class="active" for="mutationRate">GA Mutation Rate</label>
+			</div>
+		</div>
+		<div class="row">
+			<div class="input-field col s4">
+				<input id="maxVelocity" type="text" value="40" oninput="updateMaxVelocity(this.value)" />
+				<label class="active" for="maxVelocity">PSO Max Velocity</label>
+			</div>
+			<div class="input-field col s4">
+				<input id="cognition" type="text" value="0.3" oninput="updateCognition(this.value)" />
+				<label class="active" for="cognition">PSO Cognition</label>
+			</div>
+			<div class="input-field col s4">
+				<input id="social" type="text" value="0.3" oninput="updateSocial(this.value)" />
+				<label class="active" for="social">PSO Social</label>
+			</div>
+		</div>
+		<div class="row">
 			<textarea id="data4D" style="display:none"></textarea>
 			<textarea id="data6D" style="display:none"></textarea>
-			<button id="saveFile4D" onclick="saveFile4D()">Save the track (4D)</button>
-			<button id="saveFile6D" onclick="saveFile6D()">Save the track (6D)</button>
-		</p>
+			<button id="saveFile4D" class="waves-effect waves-light btn" onclick="saveFile4D()">Save the track (4D)</button>
+			<button id="saveFile6D" class="waves-effect waves-light btn" onclick="saveFile6D()">Save the track (6D)</button>
+		</div>
 	</div>
 	<div class="result">
 		<p id="success" style="display:none">Success!!</p>
@@ -97,10 +143,17 @@
 		<p>Press 1/3 to switch camera</p>
 		<p>Press F to start fuzzy control system</p>
 	</div>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="./Car-Module/js/lib/three.min.js"></script>
 	<script src="./Car-Module/js/lib/Detector.js"></script>
 	<script src="./Car-Module/js/lib/OrbitControls.js"></script>
 	<script src="./Car-Module/js/lib/FileSaver.min.js"></script>
+	<script src="./Car-Module/js/lib/materialize.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$('select').material_select();
+		});
+	</script>
 	<script src="./Fuzzy-Control-System/js/fuzzy.js"></script>
 	<script src="./Genetic-Algorithm/js/RBF.js"></script>
 	<script src="./Genetic-Algorithm/js/gene.js"></script>
