--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<button id="startMotion" class="waves-effect waves-light btn" onclick="startMotion()">Start Motion (Space / M)</button>
 			<button id="reset" class="waves-effect waves-light btn" onclick="reset()">Reset (R)</button>
 		</div>
-		<div class="row">
+		<div class="row" style="line-height:45px">
 			<div class="col s2">Camera</div>
 			<div class="col s4">
 				<input id="firstPerson" type="radio" name="camera" oninput="updateCamera()" onchange="updateCamera()">
