--- a/index.html
+++ b/index.html
@@ -153,13 +153,22 @@
 		<p id="failure" style="display:none">Failure...</p>
 	</div>
 	<div class="instructions">
-		<p>Use the mouse to control the camera</p>
-		<p>Press Space/G to start motion</p>
-		<p>Press A/D to control the steering wheel</p>
-		<p>Press ↑/↓/←/→ to adjust the position</p>
-		<p>Press R to reset</p>
-		<p>Press 1/3 to switch camera</p>
-		<p>Press F to start fuzzy control system</p>
+		<a class="waves-effect waves-light btn" href="#instructions">Instructions</a>
+	</div>
+	<div id="instructions" class="modal">
+		<div class="modal-content">
+			<h4>Instructions</h4>
+			<p>Use the mouse to control the camera</p>
+			<p>Press Space/G to start motion</p>
+			<p>Press A/D to control the steering wheel</p>
+			<p>Press ↑/↓/←/→ to adjust the position</p>
+			<p>Press R to reset</p>
+			<p>Press 1/3 to switch camera</p>
+			<p>Press F to start fuzzy control system</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">OK</a>
+		</div>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="./Car-Module/js/lib/three.min.js"></script>
@@ -171,6 +180,7 @@
 		$(document).ready(function () {
 			$('select').material_select();
 			$('.collapsible').collapsible();
+			$('.modal').modal();
 		});
 	</script>
 	<script src="./Fuzzy-Control-System/js/fuzzy.js"></script>
