--- a/WebVR/index.html
+++ b/WebVR/index.html
@@ -6,6 +6,7 @@
 	<title>Car Simulator VR</title>
 	<link rel="stylesheet" type="text/css" href="../Car-Module/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="../Car-Module/css/index.css">
+	<link rel="manifest" href="./manifest.json">
 </head>
 
 <body>
