--- a/WebVR/index.html
+++ b/WebVR/index.html
@@ -63,12 +63,10 @@
 	<div id="instructions" class="modal">
 		<div class="modal-content">
 			<h4>Instructions</h4>
-			<p>Use the mouse to control the camera</p>
-			<p>Press Space/G to start motion</p>
-			<p>Press A/D to control the steering wheel</p>
-			<p>Press ↑/↓/←/→ to adjust the position</p>
-			<p>Press R to reset</p>
-			<p>Press 1/3 to switch camera</p>
+			<p>Tilt the mobile to control the steering wheel</p>
+			<p>Look at the button to start motion</p>
+			<p>Look at the button to reset</p>
+			<p>Look at the radio button to switch camera</p>
 		</div>
 		<div class="modal-footer">
 			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">OK</a>
