--- a/WebVR/index.html
+++ b/WebVR/index.html
@@ -83,12 +83,15 @@
 			$('select').material_select();
 			$('.collapsible').collapsible();
 			$('.modal').modal();
-			screen.lockOrientation('landscape');
+			var locOrientation = screen.lockOrientation || screen.mozLockOrientation || screen.msLockOrientation || screen.orientation
+				.lock;
+			locOrientation('landscape');
 		});
 	</script>
 	<script src="../Car-Module/js/sensor.js"></script>
 	<script src="./js/lib/StereoEffect.js"></script>
 	<script src="./js/lib/DeviceOrientationControls.js"></script>
+	<script src="./js/lib/VRControls.js"></script>
 	<script src="./js/scene.js"></script>
 	<script src="./js/car.js"></script>
 </body>
