Add look operating

--- a/WebVR/index.html
+++ b/WebVR/index.html
@@ -64,9 +64,9 @@
 		<div class="modal-content">
 			<h4>Instructions</h4>
 			<p>Tilt the mobile to control the steering wheel</p>
-			<p>Look at the button to start motion</p>
-			<p>Look at the button to reset</p>
-			<p>Look at the radio button to switch camera</p>
+			<p>Look up to start/stop motion</p>
+			<p>Look down to reset</p>
+			<p>Press the radio button to switch camera</p>
 		</div>
 		<div class="modal-footer">
 			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">OK</a>
