Update screen lock

--- a/WebVR/index.html
+++ b/WebVR/index.html
@@ -83,6 +83,7 @@
 			$('select').material_select();
 			$('.collapsible').collapsible();
 			$('.modal').modal();
+			screen.orientation.lock('landscape');
 		});
 	</script>
 	<script src="../Car-Module/js/sensor.js"></script>
