--- a/index.html
+++ b/index.html
@@ -160,11 +160,13 @@
 			<h4>Instructions</h4>
 			<p>Use the mouse to control the camera</p>
 			<p>Press Space/G to start motion</p>
+			<p>Press R to reset</p>
 			<p>Press A/D to control the steering wheel</p>
 			<p>Press ↑/↓/←/→ to adjust the position</p>
-			<p>Press R to reset</p>
 			<p>Press 1/3 to switch camera</p>
 			<p>Press F to start fuzzy control system</p>
+			<p>Press G to start genetic algorithm</p>
+			<p>Press P to start particle swarm optimization</p>
 		</div>
 		<div class="modal-footer">
 			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">OK</a>
