Update map function

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<option value="map2">Track 2</option>
 						<option value="map3">Track 3</option>
 				</select>
-				<label>Map</label>
+				<label>Map (Not yet finished)</label>
 			</div>
 		</div>
 		<div class="row">
